# candle-mi

./: .gitignore  BACKENDS.md  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  HOOKS.md  LICENSE-APACHE  PLAN-ALGZOO-PHASE-A.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  publish.yml
data/: counterfact_transluce_test.json  counterfact_transluce_test_all.json  counterfact_transluce_test_both_correct.json
design/: add-at-positions.md  candle-version.md  error-handling.md  hf-fetch-model-single-file-api.md  hook-overhead.md  hook-system.md  intervention-api.md  migrate-npz-to-anamnesis.md  rwkv7-effective-attention.md
docs/: quickstart-examples-proposal.md
docs/audit/: examples_coverage_audit.md
docs/conventions/: CONVENTIONS-v1-reference-based.md  CONVENTIONS-v2-trigger-based.md  README.md
docs/dogfooding-feedbacks/: json-output-should-be-self-contained.md  transluce-ai-assessment-for-candle-mi.md
docs/experiments/clt-vs-plt-planning-site/: clt_step_a_gemma2_2b.json  clt_step_a_llama.json  clt_vs_plt_gemma2_2b.json  clt_vs_plt_llama.json  findings.md
docs/roadmaps/: PLAN-ALGZOO-SURPRISE-BAKEOFF.md  PLAN-PHASE-B.md  PLAN-PLT-LLAMA-PLANNING-SIGNAL.md  candle_mi_v019_roadmap.md  candle_mi_v019_roadmap_V2.md  candle_mi_v019_roadmap_V3.md  release-sequence.md
examples/: README.md  STYLE_GUIDE.md  attention_knockout.rs  attention_patterns.rs  attention_routing.rs  auto_config_dogfood.rs  character_count_helix.rs  clt_probe.rs  clt_vs_plt_planning_site.rs  correction_test.rs  counterfact_patching.rs  factual_routing.rs  fast_download.rs  figure13_planning_poems.rs  generate.rs  logit_lens.rs  quick_start_sae.rs  quick_start_transformer.rs  recurrent_feedback.rs  rwkv_inference.rs  steering_convergence.rs  steering_dose_response.rs  stoicheia_analysis.rs  stoicheia_inference.rs  token_positions.rs
examples/figure13/: CLT_LANDSCAPE.md  Sans titre-1.nb  figure13_plot.wl  gemma2m_output.json  gemma_output.json  llama_ee_output.json  llama_output.json
examples/results/activation_patching/: README.md
examples/results/attention_routing/: README.md  attention_routing_plot.wl  gemma-2-2b-2.5m.json  gemma-2-2b-426k.json
examples/results/character_count_helix/: README.md  character_count_helix.rs  helix_plot.wl
examples/results/character_count_helix/texts/: CHAPTER IX.The Gorgon’s Head.txt  CHAPTER VI.Hundreds of People.txt  CHAPTER VII.Monseigneur in Town.txt  CHAPTER VIII.Monseigneur in the Cou.txt  CHAPTER X.Two Promises.txt  CHAPTER XI.A Companion Picture.txt  CHAPTER XII.The Fellow of Delicacy.txt  CHAPTER XIII.The Fellow of No Delic.txt  CHAPTER XIV.The Honest Tradesman.txt  CHAPTER XIX.An Opinion.txt  CHAPTER XV.Knitting.txt  CHAPTER XVI.Still Knitting.txt  CHAPTER XVII.One Night.txt  CHAPTER XVIII.Nine Days.txt  CHAPTER XX.A Plea.txt  CHAPTER XXI.Echoing Footsteps.txt  CHAPTER XXII.The Sea Still Rises.txt  CHAPTER XXIII.Fire Rises.txt  (+1 more)
examples/results/logit_lens/: gemma-2-2b.json  llama-3.2-1b.json  starcoder2-3b.json
examples/results/steering_convergence/: README.md  convergence_plot.wl  gemma-2-2b.json  llama-3.2-1b.json
scripts/: README.md  clt_position_sweep_comparison.md  clt_position_sweep_validation_llama.py  plt_gemma_reference.json  plt_gemma_validation.py  plt_llama_reference.json  plt_llama_validation.py  rwkv6_reference.json  rwkv7_reference.json  rwkv7_validation.py  rwkv7_validation_comparison.md  sae_validation.py
src/: backend.rs  config.rs  download.rs  error.rs  hooks.rs  lib.rs  memory.rs  sparse.rs
src/cache/: activation.rs  attention.rs  kv.rs  mod.rs
src/clt/: gemmascope.rs  gemmascope_test_fixture.yaml  mod.rs
src/interp/: intervention.rs  logit_lens.rs  mod.rs  steering.rs
src/rwkv/: config.rs  mod.rs  norm.rs
src/sae/: mod.rs  npz.rs
src/stoicheia/: ablation.rs  config.rs  fast.rs  mod.rs  piecewise.rs  probing.rs  standardize.rs  surprise.rs  tasks.rs
src/tokenizer/: mod.rs  rwkv.rs
src/transformer/: attention.rs  mlp.rs  mod.rs  norm.rs  recurrent.rs  rope.rs
src/util/: masks.rs  mod.rs  pca.rs  positioning.rs
tests/: bench_hook_overhead.rs  fast_download.rs  stoicheia_analysis.rs  validate_anacrousis.rs  validate_clt.rs  validate_models.rs  validate_plt.rs  validate_plt_gemma.rs  validate_rwkv6.rs  validate_rwkv7.rs  validate_sae.rs  validate_stoicheia.rs
tests/fixtures/stoicheia/: ref_2nd_argmax_h2_n2.json  ref_longest_cycle_h4_n4.json  rnn_2nd_argmax_h2_n2.safetensors  transformer_longest_cycle_h4_n4.safetensors
